--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="splash-container">
     <div class="splash">
-        <img src="index.jpg" style="width:130px;height:130px;"/>
+        <img src="mkinjimok.jpg" style="width:130px;height:130px;"/>
         <h1 class="splash-head">Imanuel Saraun</h1>
         <p class="splash-subhead">
             Selamat datang :)
