--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.html">
     <link rel="stylesheet" href="/css/pure/grids-responsive-min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="stylesheet" href="nuelsaraun.css">
+    <link rel="stylesheet" href="index.css">
     <a href="index.html"></a>
 </head>
 
